deploy/app/base/gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: eg
  # namespace: ---
  # annotations:
  #   cert-manager.io/cluster-issuer: letsencrypt-dns
spec:
  gatewayClassName: envoy-gateway
  listeners:
  - name: https
    protocol: HTTPS
    port: 443
    tls:
      mode: Terminate
      certificateRefs:
      - name: tls-cert-secret
    allowedRoutes:
      kinds:
        - kind: HTTPRoute
      namespaces:
        from: All

  - name: webtransport
    protocol: UDP
    port: 8443               
    allowedRoutes:
      namespaces:
        from: All
      kinds:
        - kind: UDPRoute
