deploy/app/base/gateway/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: api-route
spec:
  parentRefs:
    - name: eg
      sectionName: https
  hostnames:
  - api.example.com

  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /api

      filters:
      - type: URLRewrite
        urlRewrite:
          path:
            type: ReplacePrefixMatch
            replacePrefixMatch: /

      backendRefs:
        - name: backend
          port: 8080
---

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: app-route
spec:
  parentRefs:
    - name: eg
      sectionName: https
  hostnames:
  - app.example.com

  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /app
      filters:
      - type: URLRewrite
        urlRewrite:
          path:
            type: ReplacePrefixMatch
            replacePrefixMatch: /

      backendRefs:
        - name: frontend
          port: 80
